Synchronization fixes for distribution